Added library compiler for windows

--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -104,14 +104,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f84a5ac6",
-   "metadata": {},
-   "source": [
-    "Tuning run stopped early, seems like error was not increasing consistently with cooling rate, and variance of results was still high. I will run this simulation again tonight, to full, on a work computer."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "0723e68a",
@@ -230,6 +222,18 @@
    "metadata": {},
    "source": [
     "## Parameter step-size and scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d3a5271",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code changed to implement T_init = 1 and cooling_rate = 0.95 as fixed metaparams\n",
+    "# Now the initial step-size for fourier coefficient proposal is an input parameter (initially set to 0.2)\n",
+    "# Below we will vary this parameter from 0.05 to 1 in steps of 0.05 and record the convergence results."
    ]
   },
   {
