Added more hyperparameter tuning

--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9d429d41",
    "metadata": {},
    "outputs": [],
@@ -101,35 +101,6 @@
     "        \n",
     "        results_array[i, c] = pulse.best_error\n",
     "        print(f'Trial {i + 1} of {trial_num} complete.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "0723e68a",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'plt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Plot results\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mplt\u001b[49m\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m8\u001b[39m,\u001b[38;5;241m5\u001b[39m))\n\u001b[1;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39merrorbar(cooling_rate_array, np\u001b[38;5;241m.\u001b[39mmean(results_array,\u001b[38;5;241m0\u001b[39m), yerr\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mstd(results_array,\u001b[38;5;241m0\u001b[39m), fmt\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m--o\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m plt\u001b[38;5;241m.\u001b[39myscale(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlog\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'plt' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Plot results\n",
-    "plt.figure(figsize=(8,5))\n",
-    "plt.errorbar(cooling_rate_array, np.mean(results_array,0), yerr=np.std(results_array,0), fmt='--o')\n",
-    "plt.yscale(\"log\")\n",
-    "plt.ylabel(\"Training error w/ standard deviation\")\n",
-    "plt.xlabel(\"Simulated Annelaing cooling rate\")\n",
-    "plt.title(f\"Cooling rate tuning, {trial_num} trials per rate\")\n",
-    "plt.show()"
    ]
   },
   {
@@ -229,11 +200,141 @@
    "execution_count": null,
    "id": "4d3a5271",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting init_step: 0.2 trials.\n",
+      " Temperature reduced to   0.89999997615814209     \n",
+      " Uphill success ratio   0.96485182632667121     \n",
+      " Best error=    1.1946144127282787E-003\n",
+      " Temperature reduced to   0.80999995708465633     \n",
+      " Uphill success ratio   0.98222637979420013     \n",
+      " Best error=    1.1946144127282787E-003\n",
+      " Temperature reduced to   0.72899994206428687     \n",
+      " Uphill success ratio   0.97902097902097907     \n",
+      " Best error=    1.1946144127282787E-003\n",
+      " Temperature reduced to   0.65609993047714510     \n",
+      " Uphill success ratio   0.97042513863216262     \n",
+      " Best error=    1.1946144127282787E-003\n",
+      " Temperature reduced to   0.59048992178678927     \n",
+      " Uphill success ratio   0.92961487383798136     \n",
+      " Best error=    1.1946144127282787E-003\n",
+      " Temperature reduced to   0.53144091552973349     \n",
+      " Uphill success ratio   0.95541401273885351     \n",
+      " Best error=    2.7149560650452376E-004\n",
+      " Temperature reduced to   0.47829681130622137     \n",
+      " Uphill success ratio   0.96286107290233836     \n",
+      " Best error=    2.7149560650452376E-004\n",
+      " Temperature reduced to   0.43046711877211463     \n",
+      " Uphill success ratio   0.93499554764024928     \n",
+      " Best error=    5.3967222217732314E-005\n",
+      " Temperature reduced to   0.38742039663176731     \n",
+      " Uphill success ratio   0.92592592592592593     \n",
+      " Best error=    5.3967222217732314E-005\n",
+      " Temperature reduced to   0.34867834773176853     \n",
+      " Uphill success ratio   0.95411176737846437     \n",
+      " Best error=    5.3967222217732314E-005\n",
+      " Temperature reduced to   0.31381050464545207     \n",
+      " Uphill success ratio   0.93980756321324677     \n",
+      " Best error=    5.3967222217732314E-005\n",
+      " Temperature reduced to   0.28242944669908138     \n",
+      " Uphill success ratio   0.96352374397797658     \n",
+      " Best error=    5.3967222217732314E-005\n",
+      " Temperature reduced to   0.25418649529553050     \n",
+      " Uphill success ratio   0.92899800928998011     \n",
+      " Best error=    5.3967222217732314E-005\n",
+      " Temperature reduced to   0.22876783970569914     \n",
+      " Uphill success ratio   0.90090090090090091     \n",
+      " Best error=    5.3967222217732314E-005\n",
+      " Temperature reduced to   0.20589105028087890     \n",
+      " Uphill success ratio   0.92024539877300615     \n",
+      " Best error=    5.3967222217732314E-005\n",
+      " Temperature reduced to   0.18530194034396585     \n",
+      " Uphill success ratio   0.96618357487922701     \n",
+      " Best error=    5.3967222217732314E-005\n",
+      " Temperature reduced to   0.16677174189162675     \n",
+      " Uphill success ratio   0.93645484949832780     \n",
+      " Best error=    5.3967222217732314E-005\n",
+      " Temperature reduced to   0.15009456372631591     \n",
+      " Uphill success ratio   0.93770931011386471     \n",
+      " Best error=    5.3967222217732314E-005\n",
+      " Temperature reduced to   0.13508510377515107     \n",
+      " Uphill success ratio   0.93729078330729743     \n",
+      " Best error=    5.3967222217732314E-005\n",
+      " Temperature reduced to   0.12157659017695611     \n",
+      " Uphill success ratio   0.94022834116856946     \n",
+      " Best error=    5.3967222217732314E-005\n",
+      " Temperature reduced to   0.10941892826064871     \n",
+      " Uphill success ratio   0.93875726419311578     \n",
+      " Best error=    5.3967222217732314E-005\n",
+      " Temperature reduced to    9.8477032825833297E-002\n",
+      " Uphill success ratio   0.91403699673558214     \n",
+      " Best error=    5.3967222217732314E-005\n",
+      " Temperature reduced to    8.8629327195374544E-002\n",
+      " Uphill success ratio   0.93064480389984494     \n",
+      " Best error=    5.3967222217732314E-005\n",
+      " Temperature reduced to    7.9766392362749267E-002\n",
+      " Uphill success ratio   0.92470277410832236     \n",
+      " Best error=    5.3967222217732314E-005\n",
+      " Temperature reduced to    7.1789751224695345E-002\n",
+      " Uphill success ratio   0.94086021505376349     \n",
+      " Best error=    5.3967222217732314E-005\n"
+     ]
+    }
+   ],
    "source": [
     "# Code changed to implement T_init = 1 and cooling_rate = 0.95 as fixed metaparams\n",
     "# Now the initial step-size for fourier coefficient proposal is an input parameter (initially set to 0.2)\n",
-    "# Below we will vary this parameter from 0.05 to 1 in steps of 0.05 and record the convergence results."
+    "# Below we will vary this parameter from 0.05 to 1 in steps of 0.05 and record the convergence results.\n",
+    "# Set global parameters kept constant\n",
+    "n_max = 10\n",
+    "tau = 100e-9\n",
+    "pulse_length = 100\n",
+    "band_dig = 11\n",
+    "amp_dig = 1\n",
+    "amp_max = 0\n",
+    "det_max = 0.1/tau\n",
+    "w1_max = 2*np.pi*40e6\n",
+    "lambda_val = 1000\n",
+    "\n",
+    "# init_step_array = np.array([0.01, 0.05, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0])\n",
+    "init_step_array = np.array([0.2])\n",
+    "trial_num = 1\n",
+    "results_array = np.zeros([trial_num, len(init_step_array)])\n",
+    "\n",
+    "for s in range(len(init_step_array)):\n",
+    "    init_step = init_step_array[s]\n",
+    "    print(f\"Starting init_step: {init_step} trials.\")\n",
+    "\n",
+    "    for i in range(trial_num):\n",
+    "        opt = SimulatedAnnealing()\n",
+    "        pulse = opt.run_annealing(\n",
+    "                n_max=n_max,\n",
+    "                pulse_length=pulse_length,\n",
+    "                band_dig=band_dig,\n",
+    "                amp_dig=amp_dig,\n",
+    "                amp_max=amp_max,\n",
+    "                det_max=det_max,\n",
+    "                init_step = init_step,\n",
+    "                w1_max=w1_max,\n",
+    "                lambda_val=lambda_val,\n",
+    "                tau=tau,\n",
+    "                save_pulse=False)\n",
+    "        \n",
+    "        results_array[i, s] = pulse.best_error\n",
+    "\n",
+    "# Plot results\n",
+    "plt.figure(figsize=(8,5))\n",
+    "plt.plot(init_step_array, results_array[0, :], 'o--')\n",
+    "# plt.plot(init_step_array, results_array[1, :], 'o--')\n",
+    "# plt.plot(init_step_array, results_array[2, :], 'o--')\n",
+    "plt.yscale(\"log\")\n",
+    "plt.ylabel(\"Training error\")\n",
+    "plt.xlabel(\"Simulated Annelaing init step_size\")\n",
+    "plt.title(f\"Cooling rate tuning, {trial_num} trials per rate\")\n",
+    "plt.show()"
    ]
   },
   {
