Added logging of annealing algorithm to txt file for windows.

--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -205,82 +205,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting init_step: 0.2 trials.\n",
-      " Temperature reduced to   0.89999997615814209     \n",
-      " Uphill success ratio   0.96485182632667121     \n",
-      " Best error=    1.1946144127282787E-003\n",
-      " Temperature reduced to   0.80999995708465633     \n",
-      " Uphill success ratio   0.98222637979420013     \n",
-      " Best error=    1.1946144127282787E-003\n",
-      " Temperature reduced to   0.72899994206428687     \n",
-      " Uphill success ratio   0.97902097902097907     \n",
-      " Best error=    1.1946144127282787E-003\n",
-      " Temperature reduced to   0.65609993047714510     \n",
-      " Uphill success ratio   0.97042513863216262     \n",
-      " Best error=    1.1946144127282787E-003\n",
-      " Temperature reduced to   0.59048992178678927     \n",
-      " Uphill success ratio   0.92961487383798136     \n",
-      " Best error=    1.1946144127282787E-003\n",
-      " Temperature reduced to   0.53144091552973349     \n",
-      " Uphill success ratio   0.95541401273885351     \n",
-      " Best error=    2.7149560650452376E-004\n",
-      " Temperature reduced to   0.47829681130622137     \n",
-      " Uphill success ratio   0.96286107290233836     \n",
-      " Best error=    2.7149560650452376E-004\n",
-      " Temperature reduced to   0.43046711877211463     \n",
-      " Uphill success ratio   0.93499554764024928     \n",
-      " Best error=    5.3967222217732314E-005\n",
-      " Temperature reduced to   0.38742039663176731     \n",
-      " Uphill success ratio   0.92592592592592593     \n",
-      " Best error=    5.3967222217732314E-005\n",
-      " Temperature reduced to   0.34867834773176853     \n",
-      " Uphill success ratio   0.95411176737846437     \n",
-      " Best error=    5.3967222217732314E-005\n",
-      " Temperature reduced to   0.31381050464545207     \n",
-      " Uphill success ratio   0.93980756321324677     \n",
-      " Best error=    5.3967222217732314E-005\n",
-      " Temperature reduced to   0.28242944669908138     \n",
-      " Uphill success ratio   0.96352374397797658     \n",
-      " Best error=    5.3967222217732314E-005\n",
-      " Temperature reduced to   0.25418649529553050     \n",
-      " Uphill success ratio   0.92899800928998011     \n",
-      " Best error=    5.3967222217732314E-005\n",
-      " Temperature reduced to   0.22876783970569914     \n",
-      " Uphill success ratio   0.90090090090090091     \n",
-      " Best error=    5.3967222217732314E-005\n",
-      " Temperature reduced to   0.20589105028087890     \n",
-      " Uphill success ratio   0.92024539877300615     \n",
-      " Best error=    5.3967222217732314E-005\n",
-      " Temperature reduced to   0.18530194034396585     \n",
-      " Uphill success ratio   0.96618357487922701     \n",
-      " Best error=    5.3967222217732314E-005\n",
-      " Temperature reduced to   0.16677174189162675     \n",
-      " Uphill success ratio   0.93645484949832780     \n",
-      " Best error=    5.3967222217732314E-005\n",
-      " Temperature reduced to   0.15009456372631591     \n",
-      " Uphill success ratio   0.93770931011386471     \n",
-      " Best error=    5.3967222217732314E-005\n",
-      " Temperature reduced to   0.13508510377515107     \n",
-      " Uphill success ratio   0.93729078330729743     \n",
-      " Best error=    5.3967222217732314E-005\n",
-      " Temperature reduced to   0.12157659017695611     \n",
-      " Uphill success ratio   0.94022834116856946     \n",
-      " Best error=    5.3967222217732314E-005\n",
-      " Temperature reduced to   0.10941892826064871     \n",
-      " Uphill success ratio   0.93875726419311578     \n",
-      " Best error=    5.3967222217732314E-005\n",
-      " Temperature reduced to    9.8477032825833297E-002\n",
-      " Uphill success ratio   0.91403699673558214     \n",
-      " Best error=    5.3967222217732314E-005\n",
-      " Temperature reduced to    8.8629327195374544E-002\n",
-      " Uphill success ratio   0.93064480389984494     \n",
-      " Best error=    5.3967222217732314E-005\n",
-      " Temperature reduced to    7.9766392362749267E-002\n",
-      " Uphill success ratio   0.92470277410832236     \n",
-      " Best error=    5.3967222217732314E-005\n",
-      " Temperature reduced to    7.1789751224695345E-002\n",
-      " Uphill success ratio   0.94086021505376349     \n",
-      " Best error=    5.3967222217732314E-005\n"
+      "Starting init_step: 0.2 trials.\n"
      ]
     }
    ],
