Prep for overnight runs

--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "9d429d41",
    "metadata": {},
    "outputs": [],
@@ -105,24 +105,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "9e7b52a8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "96"
+       "array([ 20.,  50.,  80., 110., 140., 170., 200., 230., 260., 290., 320.,\n",
+       "       350., 380., 410.])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n_max = min(30, int(np.floor(6*16e-9*300e6)))\n",
-    "6*16"
+    "[10, 20, 40, 60, 80, 100, 120, 140, 160, 180, 200, 240, 280, 300, 350, 400]"
    ]
   },
   {
